<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_form_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.ordory.ordory.ProductFormFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="9dp"
                android:paddingTop="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/add_product"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:id="@+id/productName"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                android:id="@+id/price"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_quantity"
                android:id="@+id/quantity"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_create_shoplist"
                android:layout_marginTop="25dp"
                android:background="@color/colorOrange"
                android:textColor="@color/colorWhite"
                android:textSize="24dp"
                android:text="Enregistrer"
                />
            <TextView
                android:id="@+id/createProductInfo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="14dp"
                android:textAlignment="center"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="27dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
